# unigate

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  local.yaml.example  pyproject.toml  run_server.py  test_core.py  test_telegram.yaml  test_transform.yaml  unigate.yaml
docs/: architecture.md  cli.md  configuration.md  getting-started.md  phase-1.md  plugin-architecture.md  plugin-development.md  plugin-management.md  plugins.md  roadmap.md  routing-design.md  routing.md
examples/: README.md  run_telegram.py  telegram_bot.py  test_server.py  test_telegram.py  unigate.json  unigate.yaml.example
scratch/: debug_full.py  debug_routing.py  debug_server.py  debug_telegram.py  get_updates.py  launcher.py  out.txt  quick_server.py  run.bat  run.py  run_fastapi.py  run_simple.py  run_test.py  server_err.txt  server_simple.py  start.bat  start_server.py  telegram_check.py  test_all.ps1  test_cli.ps1  test_cli2.ps1  test_flush.py  test_full.ps1  test_full_flow.ps1  test_poll.ps1  test_port.py  test_routing.yaml  test_routing_check.py  test_routing_isolated.py  test_server.ps1  test_telegram.ps1  test_telegram_send.py  test_tg_check.ps1  test_tg_check.py  test_tg_direct.ps1  test_tg_reply.ps1  test_tg_to_web.py  test_trace.py  test_ui.ps1  test_uvicorn.py  (+2 more)
src/unigate/: __init__.py  __main__.py  adapters.py  asgi.py  capabilities.py  channel.py  cli.py  config.py  dedup.py  envelope.py  events.py  extensions.py  gate.py  inbox.py  instance.py  instance_manager.py  interactive.py  kernel.py  lifecycle.py  message.py  outbox.py  registry.py  resilience.py  routing.py  runtime.py  session.py  storage_config.py  stores.py  version.py
src/unigate/channels/: __init__.py  api.py  internal.py  loopback.py  telegram.py  web.py  websocket_server.py
src/unigate/plugins/: __init__.py  base.py  channel_fake_sms.py  channel_sms.py  channel_telegram.py  channel_telegram_full.py  channel_web.py  channel_web_full.py  channel_webui.py  channel_whatsapp.py  extension_identity.py  match_from.py  match_media.py  match_sender.py  match_text.py  match_time.py  transform_add.py  transform_case.py  transform_extract.py  transform_truncate.py  transport_ftp.py  transport_http.py  transport_websocket.py
tests/: test_asgi.py  test_channels.py  test_cli.py  test_config_cli.py  test_contracts.py  test_file_stores.py  test_interactions.py  test_kernel.py  test_matchers.py  test_plugins.py  test_routing.py  test_routing_comprehensive.py  test_runtime.py  test_sessions.py  test_sqlite_runtime.py  test_storage_runtime.py  test_testing.py  test_transforms.py
tests/configs/: instances.yaml  routing.yaml
(+26 files in other folders)
